# phenosigdb

./: .gitignore  LICENSE-DATA.md  README.md  phenosigdb-build  phenosigdb-validate  pyproject.toml
R/: phenosigdb.R
curation/: MIGRATION_NOTES.md  README.md
curation/CAF.Affo21/: members.tsv  source.yaml
curation/CAF.Cords23/: members.tsv
curation/CAF.Dominguez20/: members.tsv  source.yaml
curation/CAF.Elyada19/: source.yaml
curation/CAF.Grout22/: source.yaml
curation/CAF.Kieffer20/: members.tsv  source.yaml
curation/CAF.Neuzillet22/: members.tsv  source.yaml
curation/CAF.Qin23/: source.yaml
curation/CAF.Wang21/: members.tsv
curation/CAF.Zhang23/: source.yaml
curation/CCA.Serrano23/: source.yaml
curation/CCA.Sia13/: source.yaml
data/: phenosigdb.parquet  phenosigdb_human.parquet  phenosigdb_human_translation_signature_stats.tsv  phenosigdb_mouse.parquet  phenosigdb_mouse_translation_signature_stats.tsv  phenosigdb_reference_metadata.json  signatures.md
phenosigdb/: __init__.py  build.py  homology.py  io.py  optional_resources.py  query.py  release.py  validate.py
phenosigdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/: README.md  pyproject.toml
python/phenosigdb/: __init__.py  _download.py  io.py  query.py  resources.py
python/tests/: conftest.py  test_query.py  test_resources.py
rpkg/: DESCRIPTION  LICENSE  NAMESPACE  README.md
signatures/: README.md  phenosigdb-build  phenosigdb-external-imports  phenosigdb-validate
tests/: test_build.py  test_query.py  test_release.py  test_validate.py
(+253 files in other folders)
