[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phenosigdb"
version = "0.1.0"
description = "A lightweight, versioned reference database of phenotypic transcriptomic signatures"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14.0",
  "PyYAML>=6.0",
]

[project.scripts]
phenosigdb-build = "phenosigdb.build:main"
phenosigdb-validate = "phenosigdb.validate:main"

[tool.setuptools]
packages = ["phenosigdb"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
