[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phenosigdb"
version = "0.1.3"
description = "Python access to PhenoSigDB signatures"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pandas>=2.0",
  "platformdirs>=4.0",
  "pyarrow>=14.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["phenosigdb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
